--- a/index.html
+++ b/index.html
@@ -103,8 +103,9 @@
         <div class="mask rgba-black-light"></div>
       </div>
       <div class="carousel-caption">
-        <h3 class="h3-responsive">Poznaj naszą ofertę</h3>
-        <p>Secondary text</p>
+        <!-- <h3 class="h3-responsive">Poznaj naszą ofertę</h3> -->
+        <a href="#offer" class="btn btn-large goldBackground text-white text-uppercase">Poznaj naszą ofertę
+        </a>
       </div>
     </div>
     <!-- <div class="carousel-item">
@@ -169,12 +170,12 @@
    <div class="row">
      <div class="col-sm-8">
         <div class="carousel-caption">
-            <h3 class="h3-responsive">Profesjonalny zespół i obsługa</h3>
+            <h3 class="h3-responsive text-uppercase ">Profesjonalny zespół i obsługa</h3>
           </div>
      </div>
      <div class="col-sm-4">
         <div class="carousel-caption1">
-      <a href="#" class="btn btn-large goldBackground text-white">Skontaktuj się z nami
+      <a href="#" class="btn btn-large goldBackground text-white text-uppercase">Skontaktuj się z nami
       </a>
         </div>
      </div>
