--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
      </div>
      <div class="col-sm-4">
         <div class="carousel-caption1">
-      <a href="#" class="btn btn-large goldBackground text-white text-uppercase">Skontaktuj się z nami
+      <a href="#contact" class="btn btn-large goldBackground text-white text-uppercase">Skontaktuj się z nami
       </a>
         </div>
      </div>
@@ -252,6 +252,47 @@
         </div>
   </div>
 </div>
+</div>
+</div>
+
+<!-- contact -->
+<div id="contact" class="darkBlue text-white">
+  <div class="container">
+      <h2 class="text-center">Kontakt</h2>
+    <div class="row">
+      
+      <div class="col-sm-8">
+        <h2>Kancelaria Radcy Prawnego</h2>
+        <h3>Beata Kowalska</h3>
+        <h4>ul. Długa 2/2</h4>
+        <h4>00-000 Skierniewice</h4>
+        <div>
+          	<span>
+                <i class="fa fa-phone-square fa-2x gold"></i>+48 500 000 000
+            </span> 
+        </div>
+        <div>
+          	<span>
+                <i class="fa fa-envelope fa-2x gold"></i>email@gmail.com
+            </span> 
+        </div>
+      </div>
+
+      <div class="col-sm-4">
+        <h5>Godziny pracy:</h5>
+        <h6>Poniedziałek - Piątek: 8.00 - 16.00</h6>
+        <p>Prosimy o wcześniejszy kontakt telefoniczny</p>
+      </div>
+  </div>
+
+</div>  
+
+<div class="row">
+    <!-- <div class="embed-responsive embed-responsive-21by9"> -->
+      <iframe class="w-100" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2555.148219975788!2d18.851555315721555!3d50.17706497943857!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4716ca55a3930de3%3A0xeea973dce966613a!2zWmFta293YSAxLCA0My0xOTUgTWlrb8WCw7N3!5e0!3m2!1spl!2spl!4v1547037771715"></iframe>
+</div>
+</div>
+
 </div>
 
 </main>
