--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
 
-  <header>
+  <header class="fixed-top">
     <div class ="topBar darkBlue d-none d-md-block" id="top">
 	    <div class="container">
         <div class="row">
@@ -34,12 +34,14 @@
 	</div> 
   </div>
   
-  
+  <div class="navbarDiv">
+
+  </div>
   <div class="mainNav">
     
-      <nav class="navbar navbar-expand-lg navbar-light navbar-fixed-top">
+      <nav class="navbar navbar-expand-lg navbar-light">
           <div class="container">
-        <a class="navbar-brand" href="#top">
+        <a class="navbar-brand" href="#carousel">
         <div class="float-left">
               <h1 class="display-2 pr-4">&sect</h1>
             </div>
@@ -55,7 +57,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto navbar-right">
             <li class="nav-item">
-              <a class="nav-link" href="#top">STRONA GŁÓWNA</a>
+              <a class="nav-link" href="#carousel">STRONA GŁÓWNA</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#kancelaria">KANCELARIA</a>
@@ -266,11 +268,11 @@
     <div class="row">
       
       <div class="col-sm-8 pb-5">
-        <h4>Kancelaria Radcy Prawnego</h4>
-        <h4>Beata Kowalska</h4>
-        <h5>ul. Długa 2/2</h5>
+        <h4 class="pb-2">Kancelaria Radcy Prawnego</h4>
+        <h4 class="pb-2">Beata Kowalska</h4>
+        <h5 class="pb-2">ul. Długa 2/2</h5>
         <h5>00-000 Skierniewice</h5>
-        <div>
+        <div class="pb-2">
           	<span>
                 <i class="fa fa-phone-square fa-2x gold mx-2"></i>+48 500 000 000
             </span> 
@@ -283,7 +285,7 @@
       </div>
 
       <div class="col-sm-4 pt-3">
-        <h5>Godziny pracy:</h5>
+        <h5 class="pb-2">Godziny pracy:</h5>
         <h6>Poniedziałek - Piątek: 8.00 - 16.00</h6>
         <p>Prosimy o wcześniejszy kontakt telefoniczny</p>
       </div>
@@ -301,11 +303,11 @@
 
 </main>
 <footer>
-  <div class="container text-secondary">
+  <div class="container text-secondary py-4">
     <div class="row">
       <div class="col-sm-8 ">
           <div class="float-left">
-              <h1 class="display-4">&sect</h1>
+              <h1 class="display-4 pr-3">&sect</h1>
             </div>
             <div class="float-left">
         <h6>Kancelaria Radcy Prawnego</h6>
@@ -313,7 +315,7 @@
         ul. Długa 2/2, 00-000 Skierniewice
       </div>
       </div>
-      <div class="col-sm-4">
+      <div class="col-sm-4 pt-4">
         <p class="float-right">
           <span>
             <i class="fa fa-phone-square gold mx-2"></i>+48 500 000 000
