--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
         </span>
         <div class="card-body">
           <h5 class="card-title">Prawo medyczne</h5>
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
         </div>
   </div>
 </div>
