--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
 <!-- Banner -->
 <div id="page-banner">
-  <img class="d-block w-100" src="img/handsResize1.jpg" alt="First slide"/>
+  <img class="d-block w-100" src="img/handsResize1.jpg" alt="Profesjonalny zespół i obsługa"/>
    <div class="row">
      <div class="col-sm-8">
         <div class="carousel-caption">
