--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
           <span class="navbar-toggler-icon"></span>
         </button>
       
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav ml-auto navbar-right">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent" >
+          <ul class="navbar-nav ml-auto navbar-right" data-target=".navbar-collapse.show" data-toggle="collapse">
             <li class="nav-item">
               <a class="nav-link" href="#carousel">STRONA GŁÓWNA</a>
             </li>
