--- a/index.html
+++ b/index.html
@@ -318,6 +318,7 @@
       <div class="col-sm-8 ">
           <div class="float-left">
               <h1 class="display-4 pr-3">&sect</h1>
+              <!-- <img class ="img-fluid" src="img/logo_grey.png" alt="logo grey"> -->
             </div>
             <div class="float-left">
         <h6>Kancelaria Radcy Prawnego</h6>
