--- a/index.html
+++ b/index.html
@@ -315,17 +315,21 @@
 <footer>
   <div class="container text-secondary py-4">
     <div class="row">
-      <div class="col-sm-8 ">
-          <div class="float-left">
-              <h1 class="display-4 pr-3">&sect</h1>
-              <!-- <img class ="img-fluid" src="img/logo_grey.png" alt="logo grey"> -->
+      <div class="col-sm-1 vertical-align">
+          <div class="float-left ">
+              <!-- <h1 class="display-4 pr-3">&sect</h1> -->
+              <img class ="img-fluid" src="img/logo_grey.png" alt="logo grey">
             </div>
-            <div class="float-left">
+            
+    </div>
+
+    <div class="col-sm-7 ">
+      <div class="float-left">
         <h6>Kancelaria Radcy Prawnego</h6>
         Beata Kowalska<br/>
         ul. Długa 2/2, 00-000 Skierniewice
       </div>
-      </div>
+    </div>
       <div class="col-sm-4 pt-4">
         <p class="float-right">
           <span>
